# Plonky3-recursion

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  TODO.md  benchmark.html  circuit_building.html  construction.html  create_release.sh  extensions.html  hashing.html  index.html  print.html  release-plz.toml  searchindex.js  test_depth_simple.sh  toc.html  toc.js  trace_generation.html
.github/: issue-auto-label.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml  task.yml
.github/workflows/: book.yml  ci.yml  coverage.yml  issue-rfc-enforcer.yml  release-plz.yml
appendix/: benchmark.html
architecture_and_internals/: circuit_building.html
book/: book.toml
book/src/: README.md  SUMMARY.md  benchmark.md  circuit_building.md  construction.md  extensions.md  hashing.md  introduction.md
book/src/advanced_topics/: soundness.md
circuit/: Cargo.toml  README.md
circuit-prover/: Cargo.toml  README.md
circuit-prover/benches/: prover.rs
circuit-prover/examples/: blake3_merkle.rs  fake_merkle_verify.rs  fibonacci.rs  hash.rs  hash_chain.rs  merkle_verify.rs  mmcs_verify.rs  poseidon2_perm_chain.rs  poseidon2_perm_merkle.rs  poseidon_perm_chain.rs  poseidon_perm_merkle.rs  sponge_hash.rs
circuit-prover/src/: batch_stark_prover.rs  common.rs  config.rs  constraint_profile.rs  field_params.rs  lib.rs  manifest.rs  multi_stark_prover.rs  prover.rs  transparent.rs
circuit-prover/tests/: arity4_mmcs.rs  arity4_mmcs_fields.rs  koala_poseidon_witness_debug.rs  manifest.rs  npo_integration.rs
circuit/benches/: runner_traces.rs
circuit/examples/: allocation_log.rs
circuit/src/: alloc_entry.rs  builder.rs  challenger.rs  circuit.rs  config.rs  errors.rs  expr.rs  lib.rs  op.rs  prim.rs  tables.rs  test_utils.rs  transparent.rs  types.rs  utils.rs
circuit/src/builder/: circuit_builder.rs  config.rs  errors.rs  expr_builder.rs  expression_builder.rs  lowerer.rs  mod.rs  npo.rs  public_input_builder.rs
circuit/src/builder/compiler/: expression_lowerer.rs  mod.rs  non_primitive_lowerer.rs  optimizer.rs
circuit/src/builder/compiler/lowerer/: mod.rs  state.rs  tests.rs
circuit/src/builder/compiler/optimizer/: fuse_mul_add.rs
circuit/src/ops/: context.rs  executor.rs  expose_claim.rs  fri.rs  hash.rs  hash_config.rs  merkle.rs  mmcs.rs  mod.rs  npo.rs  open_input.rs  perm.rs  poseidon2.rs  poseidon2_perm.rs  poseidon_perm.rs  recompose.rs
circuit/src/ops/blake3/: builder.rs  call.rs  config.rs  executor.rs  mod.rs  plugin.rs  state.rs  trace.rs
circuit/src/ops/poseidon1_perm/: builder.rs  call.rs  config.rs  executor.rs  mod.rs  plugin.rs  state.rs  trace.rs
circuit/src/ops/poseidon2_perm/: builder.rs  call.rs  config.rs  executor.rs  input_resolver.rs  mod.rs  plugin.rs  state.rs  trace.rs
circuit/src/ops/poseidon_perm/: builder.rs  call.rs  executor.rs  mod.rs  plugin.rs  state.rs
circuit/src/symbolic/: compiler.rs  targets.rs
circuit/src/tables/: add.rs  alu.rs  hash.rs  mmcs.rs  mod.rs  mul.rs  poseidon2.rs  public.rs  runner.rs  witness.rs
coverage/: index.html
docs/: fri_verifier_immediate_values.md
docs/rfcs/: 0001-rfc-handle-multiplicities.md  0002-rfc-witness-removal.md  0003-rfc-dynamic-degree-airs.md
fri-air/: Cargo.toml
fri-air/src/: columns.rs  lib.rs  open_input_air.rs
getting_started/: examples.html  quick_start.html
merkle-tree-air/: Cargo.toml
merkle-tree-air/src/: air.rs  cols.rs  compress.rs  lib.rs
mmcs-air/src/: air.rs
patches-p3-air/: Cargo.toml
poseidon-circuit-air/: Cargo.toml
poseidon-circuit-air/src/: preprocessed.rs
poseidon-circuit-cols/: Cargo.toml  README.md
poseidon-circuit-cols/src/: cols.rs  lib.rs  preprocessed.rs
poseidon1-circuit-air/: Cargo.toml  README.md
poseidon1-circuit-air/src/: air.rs  columns.rs  lib.rs  public_types.rs
poseidon2-circuit-air/: Cargo.toml  README.md
poseidon2-circuit-air/src/: air.rs  columns.rs  lib.rs  public_types.rs  sub_builder.rs
poseidon2-compress-air/: Cargo.toml
poseidon2-compress-air/src/: air.rs  columns.rs  lib.rs
program/: Cargo.toml
program/src/: circuit.rs  expr.rs  lib.rs  prim.rs  program.rs  tables.rs  types.rs
prover/: Cargo.toml
prover/examples/: fake_merkle_verify.rs  fibonacci.rs
prover/src/: config.rs  lib.rs  prover.rs
prover/src/air/: add_air.rs  const_air.rs  fake_merkle_air.rs  mod.rs  mul_air.rs  public_air.rs  sub_air.rs  test_utils.rs  utils.rs  witness_air.rs
recursion/: Cargo.toml  README.md
recursion/examples/: recursive_aggregation.rs  recursive_fibonacci.rs  recursive_keccak.rs
recursion/src/: challenge_builder.rs  challenger_perm.rs  challenges.rs  circuit_builder.rs  circuit_challenger.rs  circuit_fri_verifier.rs  circuit_mmcs_verifier.rs  circuit_verifier.rs  debug_utils.rs  generation.rs  lib.rs  lookup.rs  multi_table_verifier.rs  public_inputs.rs  recursion.rs  recursive_challenger.rs  recursive_generation.rs  recursive_pcs.rs  recursive_traits.rs  target_allocator.rs  test_utils.rs  testing.rs
recursion/tests/: aggregation_different_shapes.rs  air_symbolic_to_circuit.rs  arity4_mmcs_bus_balance.rs  blake3_bench.rs  challenger_transcript.rs  circuit_fri_verifier.rs  fibonacci.rs  fibonacci_batch_stark_prover.rs  fibonacci_batch_stark_prover_quintic.rs  fibonacci_batch_stark_prover_zk.rs  fri.rs  goldilocks.rs  mul_air.rs  poseidon2_challenger.rs  poseidon_perm.rs  preprocessing.rs  recursive_arity4_mmcs.rs  recursive_challenger.rs  simple_batch.rs  simple_circuit.rs  test_lookups.rs  whir_verifier.rs  zk_aggregation.rs  zk_hiding_mmcs.rs
scripts/: benchmark.sh  generate_trace_svg.py  profiling.sh
symmetric-air/: Cargo.toml
symmetric-air/src/: lib.rs
symmetric-air/src/extended_poseidon2/: columns.rs  mod.rs  wrapper.rs
symmetric-air/src/sponge_air/: air.rs  columns.rs
test-utils/: Cargo.toml  README.md
test-utils/src/: lib.rs
trace-generator/: Cargo.toml
trace-generator/src/: circuit.rs  expr.rs  lib.rs  prim.rs  program.rs  tables.rs  types.rs
user_guide/: api.html  configuration.html  integration.html  low_level_api.html
(+99 files in other folders)
