
[workspace]
members = [
    "challenger-air",
    "field-air",
    "fri-air",
    "interpolation-air",
    "merkle-tree-air",
    "recursion",
    "symmetric-air",
]

[workspace.package]
description = "Plonky3 native support for recursive proof composition"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonky3/Plonky3-recursion"
homepage = "https://github.com/Plonky3/Plonky3-recursion"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]

# Local dependencies
p3-challenger-air = { path = "challenger-air", version = "0.1.0" }
p3-field-air = { path = "field-air", version = "0.1.0" }
p3-fri-air = { path = "fri-air", version = "0.1.0" }
p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
p3-merkle-tree-air = { path = "merkle-tree-air", version = "0.1.0" }
p3-recursion = { path = "recursion", version = "0.1.0" }
p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }

# Plonky3 dependencies
p3-field = { path = "../Plonky3_2/field" }
p3-air = { path = "../Plonky3_2/air" }
p3-matrix = { path = "../Plonky3_2/matrix" }
p3-symmetric = { path = "../Plonky3_2/symmetric" }
p3-uni-stark = { path = "../Plonky3_2/uni-stark" }
p3-fri = { path = "../Plonky3_2/fri" }
p3-merkle-tree = { path = "../Plonky3_2/merkle-tree" }
p3-commit = { path = "../Plonky3_2/commit" }
p3-challenger = { path = "../Plonky3_2/challenger" }
p3-keccak = { path = "../Plonky3_2/keccak" }
p3-koala-bear = { path = "../Plonky3_2/koala-bear" }
p3-dft = { path = "../Plonky3_2/dft" }

itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }

[profile.profiling]
inherits = "release"
debug = true
