
[workspace]
resolver = "2"
members = [
    "challenger-air",
    "circuit",
    "circuit-prover",
    "field-air",
    "fri-air",
    "interpolation-air",
    "poseidon2-circuit-air",
    "recursion",
    "symmetric-air",
]

[workspace.package]
description = "Plonky3 native support for recursive proof composition"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonky3/Plonky3-recursion"
homepage = "https://github.com/Plonky3/Plonky3-recursion"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace.lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Some pedantic lints
semicolon_if_nothing_returned = "warn"
match_bool = "warn"
needless_pass_by_value = "warn"

redundant_pub_crate = "allow"
too_long_first_doc_paragraph = "allow"
unused_peekable = "allow"
tuple_array_conversions = "allow"
transmute_undefined_repr = "allow"
cognitive_complexity = "allow"

[workspace.dependencies]
# Plonky3 dependencies - shared across all crates
p3-air = { path = "../Plonky3_2/air" }
p3-baby-bear = { path = "../Plonky3_2/baby-bear" }
p3-batch-stark = { path = "../Plonky3_2/batch-stark" }
p3-challenger = { path = "../Plonky3_2/challenger" }
p3-circle = { path = "../Plonky3_2/circle" }
p3-commit = { path = "../Plonky3_2/commit" }
p3-dft = { path = "../Plonky3_2/dft" }
p3-field = { path = "../Plonky3_2/field" }
p3-fri = { path = "../Plonky3_2/fri" }
p3-goldilocks = { path = "../Plonky3_2/goldilocks" }
p3-keccak = { path = "../Plonky3_2/keccak" }
p3-koala-bear = { path = "../Plonky3_2/koala-bear" }
p3-lookup = { path = "../Plonky3_2/lookup" }
p3-matrix = { path = "../Plonky3_2/matrix" }
p3-maybe-rayon = { path = "../Plonky3_2/maybe-rayon" }
p3-merkle-tree = { path = "../Plonky3_2/merkle-tree" }
p3-poseidon2 = { path = "../Plonky3_2/poseidon2" }
p3-poseidon2-air = { path = "../Plonky3_2/poseidon2-air" }
p3-symmetric = { path = "../Plonky3_2/symmetric" }
p3-uni-stark = { path = "../Plonky3_2/uni-stark" }
p3-util = { path = "../Plonky3_2/util" }

# Other common dependencies
hashbrown = "0.16.0"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
proptest = { version = "1.5", default-features = true }
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
strum = { version = "0.27.2", default-features = false }
strum_macros = "0.27.2"
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-forest = "0.3.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "alloc",
] }

# Local dependencies
p3-challenger-air = { path = "challenger-air", version = "0.1.0" }
p3-circuit = { path = "circuit", version = "0.1.0" }
p3-circuit-prover = { path = "circuit-prover", version = "0.1.0" }
p3-field-air = { path = "field-air", version = "0.1.0" }
p3-fri-air = { path = "fri-air", version = "0.1.0" }
p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
p3-poseidon2-circuit-air = { path = "poseidon2-circuit-air", version = "0.1.0" }
p3-recursion = { path = "recursion", version = "0.1.0" }
p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }

[profile.profiling]
inherits = "release"
debug = true
