[package]
name = "p3-circuit"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = "0.16.0"
p3-baby-bear.workspace = true
p3-field.workspace = true
p3-merkle-tree-air.workspace = true
p3-keccak.workspace = true
p3-symmetric.workspace = true
serde.workspace = true
