[package]
name = "p3-fri-air"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-circuit.workspace = true
p3-field.workspace = true
p3-koala-bear.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true

itertools.workspace = true
rand.workspace = true
tracing.workspace = true

[lints]
workspace = true
