[package]
name = "p3-poseidon-circuit-cols"
description = "Shared column and preprocessed-row layout for the Poseidon circuit AIRs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[lints]
workspace = true
