[package]
name = "p3-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-field.workspace = true
p3-baby-bear.workspace = true
serde.workspace = true
hashbrown = "0.16.0"
