[package]
name = "p3-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-baby-bear = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-challenger = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-circle = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-commit = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-dft = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-field = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-fri = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-matrix = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-merkle-tree = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-symmetric = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-uni-stark = { git = "https://github.com/Plonky3/plonky3.git", rev = "701b27a" }
p3-trace-generator = { path = "../trace-generator" }

[dev-dependencies]
rand = "0.9.2"
tracing = "0.1.40"
postcard = { version = "1.0", features = ["alloc"] }