[package]
name = "p3-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-circle.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-program.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
postcard = { version = "1.0", features = ["alloc"] }
rand.workspace = true

[dev-dependencies]
postcard = { version = "1.0", features = ["alloc"] }
rand.workspace = true
tracing = "0.1.40"

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

[[example]]
name = "fake_merkle_verify"
path = "examples/fake_merkle_verify.rs"
