[package]
name = "p3-symmetric-air"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2-air.workspace = true
p3-symmetric.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
